# EXR_Visualizer

./: AGENTS.md  CODEX.md  DECISIONS.md  README.md  TASKS.md  cli.py  color_pipeline.py  common.py  exr_io.py  exr_view.py  playback_controller.py  pyproject.toml  qt_viewer.py  requirements.txt  sequence_playback.py
.codex/: session.md
LUT/: .luts  Linear_to_SLog3.csp  RECS_Rec709.cube
