[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exr-visualizer"
version = "0.1.0"
description = "CLI to preview EXR images through LUT and CDL transforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "PySide6",
  "OpenColorIO",
  "OpenImageIO",
  "OpenEXR",
]

[project.scripts]
exr-view = "exr_view:main"

[tool.setuptools]
py-modules = [
  "cli",
  "color_pipeline",
  "common",
  "exr_io",
  "exr_view",
  "playback_controller",
  "qt_viewer",
  "sequence_playback",
]

[tool.setuptools.data-files]
"share/exr_visualizer/LUT" = [
  "LUT/.luts",
  "LUT/Linear_to_SLog3.csp",
  "LUT/RECS_Rec709.cube",
]
